syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.via.sep3.persistentserver.proto";
option java_outer_classname = "PersistentServerProto";
option objc_class_prefix = "PSP";

package persistentserver;

service PersistentServer{
  rpc GetTotalBalance(ClientBasicDTO) returns (TotalBalance){}
  rpc GetClientById(ClientBasicDTO) returns (Client){}
}
message ClientBasicDTO{
  int64 clientId = 1;
}
message TotalBalance{
  double totalBalance = 1;
  int32 currencyType = 2;
}
message Client{
  int64 clientId = 1;
  string name = 2;
  string country = 3;
  string identityDocument = 4;
  string birthday = 5;
  string planType = 6;
}